[package]
name = "hive-wire-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Poll wire_sources (RSS) and insert wire_events"

[[bin]]
name = "hive-wire-ingest"
path = "src/main.rs"

[dependencies]
hive-db = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
rss = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
